--- a/01_basic.html
+++ b/01_basic.html
@@ -2,7 +2,7 @@
     <head>
         <title>Word-Pad</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" href = "style.css"/>
+        <link rel="stylesheet" href = "03_style.css"/>
     </head>
     <body>
         <div id = "Header"> 
@@ -80,6 +80,6 @@
                 <textarea>I am the notepad's body</textarea>
             </div>
         </template>
-        <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript" src="02_main.js"></script>
     </body>
 </html>
